Updated logging, moved the expires max statement to its own file, shouldn't be in .logging anyway.

--- a/templates/server.logging.conf
+++ b/templates/server.logging.conf
@@ -1,8 +1,4 @@
-access_log   /var/log/nginx/access.log;
-error_log   /var/log/nginx/error.log;
+log_format kj '$time_iso8601: $http_x_forwarded_for $request status=$status bytes=$body_bytes_sent user_agent=$http_user_agent gzip_ratio=$gzip_ratio'
 
-# this is proboably being overridden by previous location{} blocks, as Nginx stops at the first match if two collide.
-location ~* ^/.*\.(jpe|g)|(gif)|(css)|(less)|(png)|(js)|(ico)$ {
-  access_log        off;
-  expires           30d;
-}
+access_log /var/log/nginx/access.log kj;
+error_log /var/log/nginx/error.log error;
