We should not call log_format in each template, that doesn't work.

--- a/templates/server.logging.conf
+++ b/templates/server.logging.conf
@@ -1,4 +1,2 @@
-log_format kj '$time_iso8601: $http_x_forwarded_for $request status=$status bytes=$body_bytes_sent user_agent=$http_user_agent gzip_ratio=$gzip_ratio'
-
-access_log /var/log/nginx/access.log kj;
+access_log /var/log/apps/access.log;
 error_log /var/log/nginx/error.log error;
