--- a/examples/cakephp.conf
+++ b/examples/cakephp.conf
@@ -5,5 +5,5 @@ server {
 
     include templates/server.rewrites.cakephp.conf;
     include templates/server.php5.conf;
-    include error.conf;
+    include templates/server.error.conf;
 }
