--- a/examples/symphony-cms.conf
+++ b/examples/symphony-cms.conf
@@ -10,5 +10,5 @@ server {
     include templates/server.location.deny.conf;
     include templates/server.logging.conf;
     include templates/server.php5.conf;
-    include error.conf;
+    include templates/server.error.conf;
 }
