--- a/examples/wordpress.conf
+++ b/examples/wordpress.conf
@@ -7,5 +7,5 @@ server {
     include templates/server.listen-local-only.conf;
     include templates/server.php5.conf;
     include templates/server.gzip.conf;
-    include error.conf;
+    include templates/server.error.conf;
 }
